--- a/extension/warning.html
+++ b/extension/warning.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>.ZIP Warning</title>
+  <title>Malicious Link Warning!</title>
   <style>
     body {
       background-color: #1a1a1a;
@@ -55,12 +55,12 @@
   </style>
 </head>
 <body>
-  <h1>Warning .ZIP Domain</h1>
+  <h1>Malicious Link Warning!</h1>
   <div class="blocked-url">
     <p id="blockedUrl"></p>
   </div>
-  <p>Warning, you are going to a .zip domain. If you are trying to download a .zip folder then this is most likely a phishing attempt.</p>
-  <p>".zip" domains can be problematic due to the potential confusion they create with ".zip" folders. This similarity in naming can be exploited by malicious actors to conduct phishing attacks. Users should exercise caution and verify the authenticity of websites they visit, especially when dealing with sensitive information or engaging in online transactions. Taking a moment to check for secure connections, validating website URLs, and confirming the credibility of sources can help users avoid falling victim to scams and protect their personal and financial information.</p>
+  <p>You are going to a @WEBSITESDOMAINSUFFIX@ domain. If you are trying to download a @WEBSITESDOMAINSUFFIX@ folder then this is most likely a phishing attempt.</p>
+  <p>"@WEBSITESDOMAINSUFFIX@" domains can be problematic due to the potential confusion they create with "@WEBSITESDOMAINSUFFIX@" files. This similarity in naming can be exploited by malicious actors to conduct phishing attacks. Users should exercise caution and verify the authenticity of websites they visit, especially when dealing with sensitive information or engaging in online transactions. Taking a moment to check for secure connections, validating website URLs, and confirming the credibility of sources can help users avoid falling victim to scams and protect their personal and financial information.</p>
   <button id="continueButton">I Understand</button>
 
   <script src="warning.js"></script>
